--- a/model_shop_frontend/package.json
+++ b/model_shop_frontend/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "echarts": "^5.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
